--- a/src/app/INF/inspection-inf/inspection-form/inspection-form.component.css
+++ b/src/app/INF/inspection-inf/inspection-form/inspection-form.component.css
@@ -148,6 +148,7 @@
     width: 120px;
     font-size: large;
     font-family: Georgia;
+   margin-bottom: 20px;
  }
  .mat-icon1{
     color: #747373;
