--- a/src/app/scheduled-work/scheduled-work.component.html
+++ b/src/app/scheduled-work/scheduled-work.component.html
@@ -42,13 +42,9 @@
 
 <div *ngIf="!scheduleBool" >
   <nav>
-    <div class="menu-icon">
-      <i class="fas fa-bars"></i>
-         <!-- <span class="menu-text">Inspector Schedule</span> -->
-         <span class="menu-logo"><img class="one" [src]="location" alt="Logo"></span></div>
-         <span class="menu-text">SCHEDULED LIST</span>
-     <div></div>
-     <div></div>
+
+    <p class="menu-text">SCHEDULED LIST</p>
+  
      <div class="profile-container">
        <i class="fas fa-user-circle profile-icon"></i>
        <span class="profile-text">{{name}}</span>
