--- a/src/app/INF/planning-eng-home/planning-eng-inf/planning-eng-inf.component.css
+++ b/src/app/INF/planning-eng-home/planning-eng-inf/planning-eng-inf.component.css
@@ -67,14 +67,14 @@
     height: 7.5vh;
     margin-left: 30px;
  }
- .btnsubmit{
-    margin-top: 30px;
+ /* .btnsubmit{
+    
     margin-left: 700px;
     height: 50px;
     width: 90px;
     font-size: large;
     font-family: Georgia;
- }
+ } */
 
  .body{
     height: 150vh;
@@ -142,7 +142,7 @@
     margin-left: 30px;
  }
  .btnsubmit{
-    margin-top: 30px;
+    margin-top: 10px;
     margin-left: 700px;
     height: 50px;
     width: 105px;
