--- a/src/app/inspector_dashboard/inspector-home/inspector-home.component.scss
+++ b/src/app/inspector_dashboard/inspector-home/inspector-home.component.scss
@@ -271,42 +271,46 @@ cursor: pointer;
 
 
 
-      .menu-icon {
-        font-size: 30px;
-        color: black;
-        cursor: pointer;
+
+      nav {
+          background-image:linear-gradient(125deg,#2c3e50 50% ,black 50%);
+        padding:8px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
       }
+      
+      .menu-text {
+        color: white;
+        font-size: 20px;
+        text-align: center;
+        margin-top: 20px;
+        margin-left: 45%; 
+        font-family: "Lucida Console", "Courier New", monospace;
     
+      }
+      
       .profile-icon {
         font-size: 20px;
-        // color:brown;
-        margin-right:10px;
+        margin-right: 8px;
         cursor: pointer;
+        color: white;
       }
+      
       .profile-text {
         margin-left: 10px;
-        color: black;
-        font-size: 20px;
+        color: white;
+        font-size: 15px;
       }
-       .menu-text{
-        margin-left: 250px;
-        color: black;
-        font-size: 30px; 
-      } 
-    
-      .menu-logo {
-        margin-left: 10px;
-        width:1px; 
-        height:1px;
-      }
-    
-        .one{
-          width: 140px;
-          height: 40px;
-          margin-top: 3px;
-          margin-left: 30px;
+      
+      
+      @media screen and (max-width: 768px) {
+        .menu-text {
+          margin-left: 15%;
         }
-    
+      }
+      
+       
 
        
     
