--- a/src/app/scheduled-work/scheduled-work.component.scss
+++ b/src/app/scheduled-work/scheduled-work.component.scss
@@ -168,38 +168,42 @@ nav {
   
   
   
-      .menu-icon {
-        font-size: 30px;
-        color: black;
-        cursor: pointer;
-      }
+     
+      nav {
+      background-image:linear-gradient(125deg,#2c3e50 50% ,black 50%);
+      padding:12px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
     
-      .profile-icon {
-        font-size: 20px;
-        // color:brown;
-        margin-right:10px;
-        cursor: pointer;
-      }
-      .profile-text {
-        margin-left: 10px;
-        color: black;
-        font-size: 20px;
-      }
-       .menu-text{
-        margin-left: 250px;
-        color: black;
-        font-size: 30px; 
-      } 
+    .menu-text {
+      color: white;
+      font-size: 20px;
+      text-align: center;
+      margin-top:10px;
+      margin-left: 45%; 
+      font-family: "Lucida Console", "Courier New", monospace;
+  
+    }
     
-      .menu-logo {
-        margin-left: 10px;
-        width:1px; 
-        height:1px;
-      }
+    .profile-icon {
+      font-size: 20px;
+      margin-right: 8px;
+      cursor: pointer;
+      color: white;
+    }
     
-        .one{
-          width: 140px;
-          height: 40px;
-          margin-top: 3px;
-          margin-left: 30px;
-        }
+    .profile-text {
+      margin-left: 10px;
+      color: white;
+      font-size: 15px;
+    }
+    
+    
+    @media screen and (max-width: 768px) {
+      .menu-text {
+        margin-left: 15%;
+      }
+    }
+    
